After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 688338 - [PATCH] gobject/gtype.c: Fix spelling of »exceed«
[PATCH] gobject/gtype.c: Fix spelling of »exceed«
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: docs
2.32.x
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2012-11-14 17:52 UTC by Paul Menzel
Modified: 2012-11-16 08:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] gobject/gtype.c: Fix spelling of »exceed« (887 bytes, patch)
2012-11-14 17:54 UTC, Paul Menzel
committed Details | Review

Description Paul Menzel 2012-11-14 17:52:19 UTC
Reading [1] I noticed a small typo.

[1] http://developer.gnome.org/gobject/stable/gobject-Type-Information.html#g-type-class-add-private
Comment 1 Paul Menzel 2012-11-14 17:54:11 UTC
Created attachment 228999 [details] [review]
[PATCH] gobject/gtype.c: Fix spelling of »exceed«

Please apply this trivial patch.
Comment 2 David King 2012-11-16 08:45:32 UTC
Comment on attachment 228999 [details] [review]
[PATCH] gobject/gtype.c: Fix spelling of »exceed«

Pushed to master and glib-2-34 branches as commits 834e6e96b355d7b313f59eef3c90a68bc5463365 and c1cb66418259304ffec8805941d8006ed9b50e13.