docs: Fix spelling of "exceed" in gobject/gtype.c

https://bugzilla.gnome.org/show_bug.cgi?id=688338